@@ -12,17 +12,15 @@ compileTestJava.options.encoding = "UTF-8"
 repositories {
     mavenCentral()
 }
+tasks.withType(JavaCompile) {
+    options.compilerArgs << "--add-exports=jdk.internal.vm.compiler/org.graalvm.compiler.nodeinfo=ALL-UNNAMED"
+}
 
 dependencies {
-    implementation 'org.junit.jupiter:junit-jupiter'
-    implementation 'org.seleniumhq.selenium:selenium-java:4.7.0'
-    implementation 'org.seleniumhq.selenium:selenium-firefox-driver:4.17.0'
-    testImplementation 'io.github.dzmitryrak:ssc:0.4.1'
-    implementation 'org.selenide:selenide-testng:1.0.0'
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation group: 'com.tngtech.junit.dataprovider', name: 'junit4-dataprovider', version: '2.10'
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.1'
-
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    testImplementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+    testImplementation 'com.codeborne:selenide:5.23.3'
 }
 
 test {
